--- a/simpApp/templates/profile.html
+++ b/simpApp/templates/profile.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Account Settings UI Design</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/profile-style.css')}}">
-</head>
-<body>
+{% extends 'layout.html' %}
+
+	{% block content %}
 	<section class="py-5 my-5">
 		<div class="container">
 			<h1 class="mb-5">Account Settings</h1>
@@ -16,7 +8,7 @@
 				<div class="profile-tab-nav border-right">
 					<div class="p-4">
 						<div class="img-circle text-center mb-3">
-							<img src="{{url_for('static',filename='img/user2.jpg')}}" alt="Image" class="shadow">
+							<img src="{{url_for('static',filename='img/default-user.jpg')}}" alt="Image" class="shadow">
 						</div>
 						<h4 class="text-center">Name</h4>
 					</div>
@@ -29,159 +21,83 @@
 							<i class="fa fa-key text-center mr-1"></i> 
 							Password
 						</a>
-						<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
-							<i class="fa fa-user text-center mr-1"></i> 
-							Security
-						</a>
-						
-						<a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
-							<i class="fa fa-bell text-center mr-1"></i> 
-							Notification
-						</a>
+
 					</div>
 				</div>
 				<div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
 					<div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
-						<h3 class="mb-4">Account Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>First Name</label>
-								  	<input type="text" class="form-control" value="Shehryar">
+						<form action="/update-details/account" method="POST">
+							<h3 class="mb-4">Account Settings</h3>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
+										  <label>First Name</label>
+										  <input type="text" class="form-control" value='{{user["first_name"]}}' id="first_name" name="first_name">
+									</div>
 								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Last Name</label>
-								  	<input type="text" class="form-control" value="Ahmad">
+								<div class="col-md-6">
+									<div class="form-group">
+										  <label>Last Name</label>
+										  <input type="text" class="form-control" value="{{user['last_name']}}" id="last_name" name="last_name">
+									</div>
 								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Email</label>
-								  	<input type="text" class="form-control" value="example@gmail.com">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Phone number</label>
-								  	<input type="text" class="form-control" value="00000000000000">
-								</div>
-							</div>
-							
-							<div class="col-md-12">
-								<div class="form-group">
-								  	<label>Bio</label>
-									<textarea class="form-control" rows="4"></textarea>
-								</div>
-							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
-						</div>
-					</div>
-					<div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
-						<h3 class="mb-4">Password Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Old password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>New password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Confirm new password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
-						</div>
-					</div>
-					<div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
-						<h3 class="mb-4">Security Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Login</label>
-								  	<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Two-factor auth</label>
-								  	<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" value="" id="recovery">
-										<label class="form-check-label" for="recovery">
-										Recovery
-										</label>
+								<div class="col-md-6">
+									<div class="form-group">
+										  <label>Email</label>
+										  <input type="text" class="form-control" value="{{user['email']}}" id="email" name="email">
 									</div>
 								</div>
 							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
-						</div>
+							<div>
+								<button class="btn btn-primary" onclick="form.submit()">Update</button>
+							</div>
+						</form>
 					</div>
-					
-						
-					<div class="tab-pane fade" id="notification" role="tabpanel" aria-labelledby="notification-tab">
-						<h3 class="mb-4">Notification Settings</h3>
-						<div class="form-group">
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="notification1">
-								<label class="form-check-label" for="notification1">
-									Allows users to receive email notifications for important updates, such as new messages or account activity.
-								</label>
+					<div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+							<form action="/update-details/password" method="POST">
+							<h3 class="mb-4">Password Settings</h3>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
+										  <label>Old password</label>
+										  <input type="password" class="form-control" id="old_password" name="old_password">
+									</div>
+								</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="notification2" >
-								<label class="form-check-label" for="notification2">
-									Allows users to receive notifications about new posts or updates from groups or communities they are a part of.
-								</label>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
+										  <label>New password</label>
+										  <input type="password" class="form-control" id="new_password" name="new_password">
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										  <label>Confirm new password</label>
+										  <input type="password" class="form-control" id="re_new_password" name="re_new_password">
+									</div>
+								</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="notification3" >
-								<label class="form-check-label" for="notification3">
-									Allows users to receive notifications about upcoming events or webinars related to the product or service.
-								</label>
+							<div>
+								<button class="btn btn-primary" onclick="form.submit()">Update</button>
 							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
-							<button class="btn btn-light">Cancel</button>
-						</div>
+							<div>
+								{% with messages = get_flashed_messages() %}
+									{% if messages %}
+										<li style="color:red; text-align: center;">{{message[0]}}</li>
+									{% endif %}
+								{% endwith %}
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</body>
-</html>
+	{% endblock content %}
+	{% block scripts %}
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	{%endblock scripts%}
+	
